--- a/oldindex1673.html
+++ b/oldindex1673.html
@@ -15,7 +15,8 @@
 
   <!-- FONT
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-<link href='https://fonts.googleapis.com/css?family=Limelight|Josefin+Sans:400,300,300italic' rel='stylesheet' type='text/css'>
+  <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
+
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="stylesheet" href="css/normalize.css">
@@ -30,59 +31,7 @@
 
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-<!--
-<div class="row">
-<div class="three columns">
-  <h2 style="text-align:cente;r">
-Historical Westover
-</h2>
-</div>
-
-<div class="three columns"> 
-  <a class="button button-primary" href="#">Home</a>
-  </div>
-
-<div class="three columns">
-  </div>
-
-</div>
--->
-
-  <div class="container" ><!--
-    <div class="row" style="background-color:rgb(100,114,122)">
-      <div class="12" style="margin-top: 25%">
-        <h1>Basic Page</h1>
-      </div>
-    </div>-->
-<div class="row">
-  <div class="tweleve columns">
-    <br />
-  </div>
-</div>
-<div class="row">
-<div class="three columns">
-
-<img src="logo.png" class=""  style="width:80px; height:auto; float:right; ">  </img>
-
-</div>
-
-<div class="three columns"> 
- <h3> <a class="navbutton button-primary .u-pull-left " href="#">Home</a> </h3>
-  </div>
-
-<div class="three columns">
-  <h3> <a class="navbutton button-primary .u-pull-left " href="#">Home</a> </h3>
-  </div>
-
-  <div class="three columns">
-  <h3> <a class="navbutton button-primary .u-pull-left " href="#">Home</a> </h3>
-  </div>
-
-</div>
-
-
-
-
+  <div class="container">
     <div class="row">
       <div class="one-half column" style="margin-top: 25%">
         <h4>Basic Page</h4>
