Finalized first version of home structure

--- a/index.html
+++ b/index.html
@@ -59,23 +59,23 @@ Historical Westover
     <br />
   </div>
 </div>
-<div class="row">
-<div class="three columns">
+<div class="row  u-full-width">
+<div class="three columns ">
 
-<img src="logo.png" class=""  style="width:80px; height:auto; float:right; ">  </img>
+<img src="logo.png" class=""  style="width:130px; height:auto; margin-top:-30pxs; ">  </img>
 
 </div>
 
 <div class="three columns"> 
- <h3> <a class="navbutton button-primary .u-pull-left " href="#">Home</a> </h3>
+ <h3> <a class="navbutton button-primary .u-pull-left " href="index.html">Home</a> </h3>
   </div>
 
 <div class="three columns">
-  <h3> <a class="navbutton button-primary .u-pull-left " href="#">Home</a> </h3>
+  <h3> <a class="navbutton button-primary .u-pull-left " href="about.html">About</a> </h3>
   </div>
 
   <div class="three columns">
-  <h3> <a class="navbutton button-primary .u-pull-left " href="#">Home</a> </h3>
+  <h3> <a class="navbutton button-primary .u-pull-left " href="contact.html">Contact</a> </h3>
   </div>
 
 </div>
@@ -85,11 +85,23 @@ Historical Westover
 
     <div class="row">
       <div class="one-half column" style="margin-top: 25%">
-        <h4>Basic Page</h4>
-        <p>This index.html page is a placeholder with the CSS, font and favicon. It's just waiting for you to add some content! If you need some help hit up the <a href="http://www.getskeleton.com">Skeleton documentation</a>.</p>
+        <h4>Who We are</h4>
+        <p>The Historical Westover Society is dedicated to perserving the history of the Westover Village community. Westover Village is located in Arlington, Virginia (38°53′13″N 77°8′22″W
+)</p>
+      </div>
+      <div class="one-half column" style="margin-top: 25%">
+        <h4>What We Do</h4>
+        <p>We provide community outreach and support for residents that are in danger of being displaced. We also work to perserve our communities legacy through campaigning for sustainable non-destructive development.</p>
       </div>
     </div>
   </div>
+
+  <div id="footer">
+          <div class="wrapfoot">
+            <h5>Contact Information</h5>
+               <p><a href="mailto:laceyhancher@gmail.com">WebMaster </a><a href="https://en.wikipedia.org/wiki/Westover,_Arlington,_Virginia">Westover Village History</a></p>
+          </div>
+     </div>
 
 <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
