Historic Designation links

--- a/about.html
+++ b/about.html
@@ -88,6 +88,13 @@ Historical Westover
         <p>Homeowners in Westover are currently eligible for Historic Preservation Tax credits. Westover is already listed on the National Historic Register . This might be helpful to homeowners who are thinking of renovation.
         </p>
     </div>
+
+    <div class="row">
+        <h4>Local vs National Historic designation? Huh?</h4>
+        <li><a href="http://www.nationalregisterofhistoricplaces.com/">Information on National Historic registration</a></li>
+        <li><a href="http://www.dhr.virginia.gov/registers/register_faq.htm">Virginia Historic Registration</a></li>
+        <li><a href="https://www.nps.gov/nr/faq.htm">National Park Service FAQ on Historic Registration</a></li>
+    </div>
     
 
   <div id="footer">
