Trivial Changes to footer.

--- a/onepage.html
+++ b/onepage.html
@@ -5,7 +5,7 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>Historic Westover</title>
+  <title>Your page title here :)</title>
   <meta name="description" content="">
   <meta name="author" content="">
 
@@ -15,38 +15,62 @@
 
   <!-- FONT
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-<link href='https://fonts.googleapis.com/css?family=Limelight|Josefin+Sans:400,300,300italic' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Limelight|Josefin+Sans:700,400,300,300italic' rel='stylesheet' type='text/css'>
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/skeleton.css">
-
+  <link rel="stylesheet" href="css/custom.css">
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="icon" type="image/png" href="images/favicon.png">
-
+  <!-- Scripts
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 </head>
 <body>
 
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-<!--
-<div class="row">
-<div class="three columns">
-  <h2 style="text-align:cente;r">
-Historical Westover
-</h2>
+
+
+ <div class="section hero">
+    <div class="container" style="margin-top:-50px;">
+      <div class="row  u-full-width transparent smoothedge" style=";">
+<div class="three columns ">
+
+<img src="logo.png" class=""  style="width:130px; height:auto; margin-top:-30pxs; ">  </img>
+
 </div>
 
 <div class="three columns"> 
-  <a class="button button-primary" href="#">Home</a>
+ <h3> <a class="navbutton button-primary .u-pull-left " href="index.html">Home</a> </h3>
   </div>
 
 <div class="three columns">
+  <h3> <a class="navbutton button-primary .u-pull-left " href="about.html">About</a> </h3>
+  </div>
+
+  <div class="three columns">
+  <h3> <a class="navbutton button-primary .u-pull-left " href="contact.html">Contact</a> </h3>
   </div>
 
 </div>
--->
+      <div class="row">
+        <div class="one-half column">
+          <h4 class="hero-heading">Historic Westover Village </h4>
+          
+        </div>
+        
+      </div>
+    </div>
+  </div>
+
+
+
+
+
+
 
   <div class="container" ><!--
     <div class="row" style="background-color:rgb(100,114,122)">
@@ -54,6 +78,7 @@ Historical Westover
         <h1>Basic Page</h1>
       </div>
     </div>-->
+<!--
 <div class="row">
   <div class="tweleve columns">
     <br />
@@ -79,6 +104,7 @@ Historical Westover
   </div>
 
 </div>
+-->
 
 
 
@@ -94,18 +120,14 @@ Historical Westover
         <p>We provide community outreach and support for residents that are in danger of being displaced. We also work to perserve our communities legacy through campaigning for sustainable non-destructive development.</p>
       </div>
     </div>
+  </div>
 
-
-
-    <div id="footer">
-          <div class="row">
+  <!--<div id="footer">
+          <div class="wrapfoot">
             <h5>Contact Information</h5>
                <p><a href="mailto:laceyhancher@gmail.com">WebMaster </a><a href="https://en.wikipedia.org/wiki/Westover,_Arlington,_Virginia">Westover Village History</a></p>
           </div>
-     </div>
-  </div>
-
-  
+     </div>-->
 
 <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
