--- a/about.html
+++ b/about.html
@@ -71,7 +71,7 @@ Historical Westover
   </div>
 
 <div class="three columns">
-  <h3> <a class="navbutton button-primary .u-pull-left " href="about.html">About</a> </h3>
+  <h3> <a class="navbutton button-primary .u-pull-left " href="about.html">Additional Information</a> </h3>
   </div>
 
   <div class="three columns">
@@ -94,6 +94,12 @@ Historical Westover
         <li><a href="http://www.nationalregisterofhistoricplaces.com/">Information on National Historic registration</a></li>
         <li><a href="http://www.dhr.virginia.gov/registers/register_faq.htm">Virginia Historic Registration</a></li>
         <li><a href="https://www.nps.gov/nr/faq.htm">National Park Service FAQ on Historic Registration</a></li>
+    </div>
+    <div class="row">
+        <h4>How to apply for local historic designation:</h4>
+        <li><a href="https://projects.arlingtonva.us/plans-studies/historic-preservation/financial-planning-tools/">Historic Preservation Planning and Financial Tools</a></li>
+        <li><a href="http://www.stpetepreservation.org/Resources/Documents/FAQ%20Local%20Historic%20Designation.pdf">Frequently Asked Questions about Local Historic District designation</a></li>
+        <li><a href="https://savingplaces.org/stories/preservation-tips-tools-how-to-save-a-place-apply-for-historic-designation#.V3nxsZMrJE5">How to Save a Place: Apply for Historic Designation</a></li>
     </div>
     
 
