--- a/about.html
+++ b/about.html
@@ -71,7 +71,7 @@ Historical Westover
   </div>
 
 <div class="three columns">
-  <h3> <a class="navbutton button-primary .u-pull-left " href="about.html">Additional Information</a> </h3>
+  <h3> <a class="navbutton button-primary .u-pull-left " href="about.html">FAQs</a> </h3>
   </div>
 
   <div class="three columns">
