--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@ Historical Westover
 )</p>
       </div>
       <div class="one-half column" style="margin-top: 25%">
-        <h4>What We Do</h4>
-        <p>We provide community outreach and support for residents that are in danger of being displaced. We also work to perserve our communities legacy through campaigning for sustainable non-destructive development.</p>
+        <h4>Events</h4>
+       <iframe src="https://calendar.google.com/calendar/embed?src=u9rr68lgn8len5v6k8jfc9gl4s%40group.calendar.google.com&ctz=America/New_York" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
       </div>
     </div>
 
