--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ Historical Westover
       </div>
       <div class="one-half column" style="margin-top: 25%">
         <h4>Events</h4>
-       <iframe src="https://calendar.google.com/calendar/embed?src=u9rr68lgn8len5v6k8jfc9gl4s%40group.calendar.google.com&ctz=America/New_York" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+       <iframe src="https://calendar.google.com/calendar/embed?title=Historic%20Westover&amp;mode=AGENDA&amp;height=300&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=u9rr68lgn8len5v6k8jfc9gl4s%40group.calendar.google.com&amp;color=%235229A3&amp;ctz=America%2FNew_York" style="border-width:0" width="400" height="300" frameborder="0" scrolling="no"></iframe>
       </div>
     </div>
 
