--- a/index.html
+++ b/index.html
@@ -82,12 +82,8 @@ Historical Westover
 
 
 
-
-    <div class="row">
-      <div class="one-half column" style="margin-top: 25%">
-        <h4>Who We are</h4>
-        <p>The Historical Westover Society is dedicated to perserving the history of the Westover Village community. Westover Village is located in Arlington, Virginia (38°53′13″N 77°8′22″W
-)</p>
+    <div class="one-half column" style="margin-top: 25%">
+    <script type="text/javascript" src="http://historicwestover.tumblr.com/js?start=0&num=5"></script>
       </div>
       <div class="one-half column" style="margin-top: 25%">
         <h4>Events</h4>
