--- a/index.html
+++ b/index.html
@@ -81,9 +81,10 @@ Historical Westover
 </div>
 
 
-    <div class="one-half column" style="margin-top: 10%">
-    <script src=”http://historicwestover.tumblr.com/js”></script>
-    </div>
+      <div class="one-half column" style="margin-top: 10%">
+        <h4>News and Information</h4>
+          <script src=”http://historicwestover.tumblr.com/js”></script>
+      </div>
       <div class="one-half column" style="margin-top: 10%">
         <h4>Events</h4>
        <iframe src="https://calendar.google.com/calendar/embed?title=Historic%20Westover&amp;mode=AGENDA&amp;height=300&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=u9rr68lgn8len5v6k8jfc9gl4s%40group.calendar.google.com&amp;color=%235229A3&amp;ctz=America%2FNew_York" style="border-width:0" width="400" height="300" frameborder="0" scrolling="no"></iframe>
