--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ Historical Westover
 
       <div class="one-half column" style="margin-top: 10%">
         <h4>News and Information</h4>
-          <script src=”http://historicwestover.tumblr.com/js”></script>
+          <div id="widgetmain" style="text-align:left;overflow-y:auto;overflow-x:hidden;width:400px;background-color:#transparent; border:1px solid #333333;"><div id="rsswidget" style="height:300px;"><iframe src="http://us1.rssfeedwidget.com/getrss.php?time=1467651224469&amp;x=http%3A%2F%2Fhistoricwestover.tumblr.com%2Frss&amp;w=400&amp;h=300&amp;bc=333333&amp;bw=1&amp;bgc=transparent&amp;m=20&amp;it=true&amp;t=Historic Westover News&amp;tc=333333&amp;ts=15&amp;tb=transparent&amp;il=false&amp;lc=0000FF&amp;ls=14&amp;lb=false&amp;id=true&amp;dc=333333&amp;ds=14&amp;idt=false&amp;dtc=284F2D&amp;dts=12" border="0" hspace="0" vspace="0" frameborder="no" marginwidth="0" marginheight="0" style="border:0; padding:0; margin:0; width:400px; height:300px;" id="rssOutput">Reading RSS Feed ...</iframe></div><div style="text-align:right;margin-bottom:0;border-top:1px solid #333333;" id="widgetbottom"><span style="font-size:70%"><a href="http://www.rssfeedwidget.com">rss feed widget</a>&nbsp;</span><br></div></div>
       </div>
       <div class="one-half column" style="margin-top: 10%">
         <h4>Events</h4>
